dist/promlens/Deployment.promlens.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: promlens
  name: promlens
  namespace: promlens
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: promlens-app-promlens-app-deployment-c87e6e6e
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: promlens
        cdk8s.io/metadata.addr: promlens-app-promlens-app-deployment-c87e6e6e
    spec:
      automountServiceAccountToken: false
      containers:
        - image: quay.io/prometheus/promlens:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: ""
              port: 8334
              scheme: HTTP
          name: promlens
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: ""
              port: 8334
              scheme: HTTP
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 192Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
