dist/promlens/Service.promlens.yaml
apiVersion: v1
kind: Service
metadata:
  name: promlens
  namespace: promlens
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: promlens-app-promlens-app-deployment-c87e6e6e
  type: ClusterIP
